scrolling issue fix (horizontal) on mobile fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,6 +16,12 @@
   }
 }
 
+html, body {
+  overflow-x: hidden;
+  position: relative;
+  width: 100%;
+}
+
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
